--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -58,7 +58,7 @@
                     <li class="navbar-brand-logo"><a href="#">svezacipele</a></li>
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Servicesss</a></li>
                     <li><a href="#">Downloads</a></li>
                   </ul>
                   <ul class="nav pull-right">
