--- a/app/views/admin/pictures/_form.html.erb
+++ b/app/views/admin/pictures/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-  <h3 id="myModalLabel">Modal header bla bla</h3>
+  <h3 id="myModalLabel">Modal header</h3>
 </div>
 <div class="modal-body">
 
