--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -60,8 +60,6 @@
                     </li>
                     <%= nav_link t(:home), root_path %>
                     <%= nav_link t(:products), products_path %>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Downloads</a></li>
                   </ul>
                   <ul class="nav pull-right">
                     <li>
@@ -72,6 +70,17 @@
                           </div>
                       <% end %>
                     </li>
+                     <li class="dropdown">
+                          <a href="#" id="my-cart-link" class="dropdown-toggle" data-toggle="dropdown">
+                            <%= render 'carts/my_cart_info' %>
+                          </a>
+                          <ul class="dropdown-menu">
+                            <li>
+                              <!-- <a class="close" href="#">&times;</a> -->
+                              <div id="cart" class="cart"><%= render 'carts/cart' %></div>
+                            </li>
+                          </ul>
+                        </li>
                     <li class="dropdown">
                       <a id="my-cart-link" href="#" class="cart-toggle">
                         <%= render 'carts/my_cart_info' %>
